--- a/CorridaFiapWebAsp/Views/_ViewImports.cshtml
+++ b/CorridaFiapWebAsp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using CorridaFiapWebAsp
-@using CorridaFiapWebAsp.Models
+﻿@using _06_Fiap.Web.AspNet
+@using _06_Fiap.Web.AspNet.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, 06-Fiap.Web.AspNet
