--- a/CorridaFiapWebAsp/Views/_ViewImports.cshtml
+++ b/CorridaFiapWebAsp/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-﻿@using _06_Fiap.Web.AspNet
-@using _06_Fiap.Web.AspNet.Models
+﻿@using CorridaFiapWebAsp
+@using CorridaFiapWebAsp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper *, 06-Fiap.Web.AspNet
+@addTagHelper *, CorridaFiapWebAsp
